fix: fix not-full-width menu on mobile

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -54,7 +54,7 @@
   transform: translateX(0);
 }
 
-@media (min-width: 426px) {
+@media (min-width: 476px) {
   .menu__inner {
     max-width: 400px;
   }
